style: add css to app.css, brought in new logo and created a div to hold image. add border line

--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,17 @@
   margin: 0;
 }
 .app {
-  background-color: #8875755b;
+  background-color: #fafafa;
+  height: 100vh;
 }
 
 .app__headerImage {
-  background-color: #8875755b;
-  width: 150px;
-  height: 100px;
+  padding: 20px;
+  height: 60px;
   object-fit: contain;
+}
+
+.app__header {
+  border-bottom: 2px solid lightgrey;
+  background-color: white;
 }
