--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   margin: 0;
 }
 .app {
-  background-color: #fafafa;
-  height: 100vh;
+  background-color: #eeeeeecb;
+  /* height: 100vh; */
 }
 
 .app__headerImage {
@@ -13,6 +13,6 @@
 }
 
 .app__header {
-  border-bottom: 2px solid lightgrey;
   background-color: white;
+  border-bottom: 1px solid lightgrey;
 }
