--- a/src/Post.css
+++ b/src/Post.css
@@ -18,7 +18,7 @@
 
 .post__image {
   width: 100%;
-  max-height: 500px;
+  /* max-height: 500px; */
   object-fit: contain;
   border-top: 1px solid lightgrey;
   border-bottom: 1px solid lightgrey;
