--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,8 @@
   background-color: white;
   border-bottom: 1px solid lightgrey;
 }
+
+.app__signup {
+  display: flex;
+  flex-direction: column;
+}
