--- a/src/Post.css
+++ b/src/Post.css
@@ -1,9 +1,11 @@
 /* Avatar and User Posts with text caption */
 .post{
+  /* margin-top: 25px; */
   max-width: 600px;
   background-color: white;
   border: 1px solid lightgrey;
   margin-bottom: 45px;
+  /* margin-left: 20px; */
 }
 
 .post__header {
